manifests/example/ingress/jupyter/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hank-jupyterlab01-svc
  labels:
    app: hank-jupyterlab01-svc
spec:
  selector:
    app: jupyter
    name: hank-jupyterlab01
  ports:
  - name: hank-web-port
    port: 8888
    targetPort: 8888
