manifests/example/ingress/jupyter/jupyter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jupyter
  labels:
    name: ingress-jupyter
    app: jupyter
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          serviceName: hank-jupyterlab01-svc
          servicePort: 8888
